# ClimateGuard

./: .dockerignore  .gitignore  DEPLOYMENT_SUMMARY.md  DOCKER_GUIDE.md  DOCKER_QUICKSTART.md  Dockerfile  FINAL_SUMMARY.md  FIXES_APPLIED.md  HUGGINGFACE_DEPLOY.md  QUICKSTART.md  README.md  SETUP_GUIDE.md  START_HERE.md  demo.py  deploy-hf.bat  deploy-hf.sh  deploy.py  docker-compose.yml  docker-start.bat  docker-start.sh  facebook.code-workspace  grader.py  hf_login.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_environment.py
facebook/: inference.py
server/: Dockerfile  __init__.py  app.py  environment.py
static/: index.html
